--- a/client/index.html
+++ b/client/index.html
@@ -58,9 +58,11 @@
             <div class="col-sm-2 col-lg-12 col-md-12">Messages</div>
         </div>
         <div class="row mt-5 chat-history"></div>
-        <div class="row mt-100"><div class="col-xs-12 col-sm-12 col-md-12">
-            <video id="otherVideo" autoplay ></video>
-        </div></div>
+        <div class="row mt-100">
+            <div class="col-xs-12 col-sm-12 col-md-12">
+                <video id="otherVideo" autoplay hidden></video>
+            </div>
+        </div>
     </div>
  
 <script src="js/sockjs.min.js" ></script>
