--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,9 @@
                 <button id="stopVideo" class="d-none"><i class="fas fa-stop"></i></button>
             </div>
         </div>
-        <div class="row mt-10 videoContainer"></div>
+        <div class="row mt-10 videoContainer">
+            
+        </div>
 
 
         <div class="form-group row mt-5">
